# chess-trainer

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  Logger.hpp  Utils.cpp  Utils.hpp  main.cpp  test.pgn
Leaner/: LichessLearner.cpp  LichessLearner.hpp
Learner/: LichessLearner.cpp  LichessLearner.hpp
Opening/: Database.cpp  Database.hpp  IOpening.cpp  IOpening.hpp  IVariation.cpp  IVariation.hpp  Parser.cpp  Parser.hpp
Opening/FrenchDefense/: advance.va  french.op
Opening/Indian/: indian.op
Opening/Scandinavian/: scandinavian.op
Opening/Scottish/: main.va  scottish.op
Pieces/: Bishop.hpp  Coordinates.cpp  Coordinates.hpp  IPiece.cpp  IPiece.hpp  King.hpp  Knight.hpp  Move.hpp  Pawn.hpp  Queen.hpp  Rock.hpp
Shell/: Help.cpp  Help.hpp  ICommand.cpp  ICommand.hpp  Shell.cpp  Shell.hpp
Shell/Commands/Notation/: FEN.hpp
Shell/Commands/Opening/: Listing.hpp  Opening.hpp  Show.hpp  Variation.hpp
Shell/Notation/: FEN.cpp  FEN.hpp  PGN.cpp  PGN.hpp
Shell/Notation/Examples/: in-progress.pgn
